--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,19 @@
    
 </head>
 <body>
+    <header>
+       
+    </header>
+    <main>
+        <div>
+            <input type="search" name="" id="search">
+            <input type="submit" value="Search" onClick="searchProduct()">
+        </div>
+        <section class="product_list"></section>
+    </main>
+    <footer>
+
+    </footer>
      <script src="products.js"></script>    
     <script src="index.js"></script>   
 </body>
