--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,18 @@
 </head>
 <body>
     <header>
-       
-    </header>
-    <main>
         <div>
             <input type="search" name="" id="search">
             <input type="submit" value="Search" onClick="searchProduct()">
+            <button type="reset" onClick="loadProducts(products)">Reset</button>
+            <button id="view_cart" onClick="viewCart()">View Cart</button>
         </div>
+    </header>
+    <main>
         <section class="product_list"></section>
     </main>
-    <footer>
-
-    </footer>
-     <script src="products.js"></script>    
+    <footer></footer>
+    <script src="products.js"></script>    
     <script src="index.js"></script>   
 </body>
 </html>
