reset func and cart func

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div>
             <input type="search" name="" id="search">
             <input type="submit" value="Search" onClick="searchProduct()">
-            <button type="reset" onClick="loadProducts(products)">Reset</button>
+            <button type="reset" onClick="resetFunc()">Reset</button>
             <button id="view_cart" onClick="viewCart()">View Cart</button>
             <select id="category" onChange="categoryFilter(this.value)">
                 <option value="">All Categories</option>
