--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Store</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
     <header>
-        <div>
-            <input type="search" name="" id="search">
-            <input type="submit" value="Search" onClick="searchProduct()">
-            <button type="reset" onClick="resetFunc()">Reset</button>
-            <button id="view_cart" onClick="viewCart()">View Cart</button>
-            <select id="category" onChange="categoryFilter(this.value)">
-                <option value="">All Categories</option>
-                <option value="food">Food</option>
-                <option value="electronics">Electronics</option>
-                <option value="sporting">Sporting</option>
-            </select>
-        </div>
     </header>
     <main>
+        <div id="command_container">
+            <div class="row">
+                <div class="col s3 offset-s1">  
+                    <input type="search" placeholder="Search" id="search">
+                </div>
+                <div class="col s2">
+                    <a class="btn green" onClick="searchProduct()">Search</a>
+                    <a class="btn blue" onClick="resetFunc()">Reset</a>
+                </div>
+                <div class="col s1">
+                    <a class="btn green" onClick="viewCart()">View Cart</a>
+                </div>
+                <div class="col s3 offset-s1">
+                    <select id="category" onChange="categoryFilter(this.value)">
+                        <option value="">All Categories</option>
+                        <option value="food">Food</option>
+                        <option value="electronics">Electronics</option>
+                        <option value="sporting">Sporting</option>
+                    </select>
+                </div>
+            </div>
+        </div>
         <section class="product_list"></section>
     </main>
     <footer></footer>
     <script src="products.js"></script>    
     <script src="index.js"></script>   
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function(){
+          $('select').formSelect();
+        });
+    </script> 
 </body>
 </html>
