--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <header>
-    </header>
+    <header><h1>ACA STORE PROJECT</h1></header>
     <main>
         <div id="command_container">
             <div class="row">
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <section class="product_list"></section>
+        <div class="product_list row"></div>
     </main>
     <footer></footer>
     <script src="products.js"></script>    
