--- a/public/index.html
+++ b/public/index.html
@@ -11,21 +11,23 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <header><h1>ACA STORE PROJECT</h1></header>
+    <header>
+        <div id="view_cart">
+            <a class="btn green" onClick="viewCart()">View Cart</a>
+        </div>
+        <h1>ACA STORE PROJECT</h1>
+    </header>
     <main>
         <div id="command_container">
             <div class="row">
-                <div class="col s3 offset-s1">  
+                <div class="col s6 m6 l3">  
                     <input type="search" placeholder="Search" id="search">
                 </div>
-                <div class="col s2">
+                <div class="col s6 m6 l3">
                     <a class="btn green" onClick="searchProduct()">Search</a>
                     <a class="btn blue" onClick="resetFunc()">Reset</a>
                 </div>
-                <div class="col s1">
-                    <a class="btn green" onClick="viewCart()">View Cart</a>
-                </div>
-                <div class="col s3 offset-s1">
+                <div class="col s12 m12 l6">
                     <select id="category" onChange="categoryFilter(this.value)">
                         <option value="">All Categories</option>
                         <option value="food">Food</option>
