--- a/public/index.html
+++ b/public/index.html
@@ -8,25 +8,42 @@
    
 </head>
 <body>
-    <header>
-        <div>
-            <input type="search" name="" id="search">
-            <input type="submit" value="Search" onClick="searchProduct()">
-            <button type="reset" onClick="resetFunc()">Reset</button>
-            <button id="view_cart" onClick="viewCart()">View Cart</button>
-            <select id="category" onChange="categoryFilter(this.value)">
-                <option value="">All Categories</option>
-                <option value="food">Food</option>
-                <option value="electronics">Electronics</option>
-                <option value="sporting">Sporting</option>
-            </select>
-        </div>
-    </header>
-    <main>
-        <section class="product_list"></section>
-    </main>
-    <footer></footer>
-    <script src="products.js"></script>    
-    <script src="index.js"></script>   
+    <div id="login_screen">
+        <h3>Login</h3>
+        <form action="">
+            Email
+            <br>
+            <input type="email" name="Email" id="user_email" required>
+            <br>
+            <br>
+            Password
+            <br>
+            <input type="password" name="Password" id="user_password" required>
+            <br>
+            <br>
+            <input type="submit" value="Login" id="user_submit" onclick="userLogin()">
+        </form>
+    </div>
+    <div id="app" style="display:none;">
+        <header>
+            <div>
+                <input type="search" name="" id="search">
+                <input type="submit" value="Search" onClick="searchProduct()">
+                <button type="reset" onClick="resetFunc()">Reset</button>
+                <button id="view_cart" onClick="viewCart()">View Cart</button>
+                <select id="category" onChange="categoryFilter(this.value)">
+                    <option value="">All Categories</option>
+                    <option value="food">Food</option>
+                    <option value="electronics">Electronics</option>
+                    <option value="sporting">Sporting</option>
+                </select>
+            </div>
+        </header>
+        <main>
+            <section class="product_list"></section>
+        </main>
+        <script src="products.js"></script>    
+        <script src="index.js"></script>   
+    </div>
 </body>
 </html>
